fix: Wrap long affiliations in HTML/PDF exports. (#690)

--- a/workers/tasks/export/styles/printDocument.scss
+++ b/workers/tasks/export/styles/printDocument.scss
@@ -48,7 +48,7 @@ section.cover {
             margin: 0;
             margin-top: 0.5em;
             span.affiliation {
-                white-space: nowrap;
+                white-space: break-word;
                 display: inline-block;
                 margin-right: 0.2em;
             }
